horizontal scroll fixed

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -204,3 +204,7 @@
 .-nopadding {
   padding: 0 !important;
 }
+
+.scroll-content {
+  overflow: hidden;
+}
